yapl/YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'true'", "'false'", 
                     "<INVALID>", "<INVALID>", "'self'", "'SELF_TYPE'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "';'", 
                     "','", "'.'", "'~'", "'@'", "'*'", "'/'", "'+'", "'-'", 
                     "'<='", "'<'", "'='", "'++'", "'--'", "'=*'", "'=/'", 
                     "'=+'", "'=-'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "ELSE", "FI", "IF", "IN", "LET", 
                      "INHERITS", "ISVOID", "LOOP", "POOL", "THEN", "WHILE", 
                      "NEW", "NOT", "TRUE", "FALSE", "TYPE_ID", "OBJECT_ID", 
                      "SELF", "SELF_TYPE", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACKET", "RBRACKET", "COLON", "SEMICOLON", 
                      "COMMA", "DOT", "NEG", "AT", "MULT", "DIV", "PLUS", 
                      "MINUS", "LE", "LT", "EQ", "INCR", "DECR", "ASSIGN_MULT", 
                      "ASSIGN_DIV", "ASSIGN_PLUS", "ASSIGN_MINUS", "ASSIGN", 
                      "STRING", "INT", "WHITESPACE", "COMMENT", "COMMENT_BLOCK", 
                      "ERROR" ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_featureDef = 2
    RULE_formalDef = 3
    RULE_expr = 4

    ruleNames =  [ "program", "classDef", "featureDef", "formalDef", "expr" ]

    EOF = Token.EOF
    CLASS=1
    ELSE=2
    FI=3
    IF=4
    IN=5
    LET=6
    INHERITS=7
    ISVOID=8
    LOOP=9
    POOL=10
    THEN=11
    WHILE=12
    NEW=13
    NOT=14
    TRUE=15
    FALSE=16
    TYPE_ID=17
    OBJECT_ID=18
    SELF=19
    SELF_TYPE=20
    LPAREN=21
    RPAREN=22
    LBRACE=23
    RBRACE=24
    LBRACKET=25
    RBRACKET=26
    COLON=27
    SEMICOLON=28
    COMMA=29
    DOT=30
    NEG=31
    AT=32
    MULT=33
    DIV=34
    PLUS=35
    MINUS=36
    LE=37
    LT=38
    EQ=39
    INCR=40
    DECR=41
    ASSIGN_MULT=42
    ASSIGN_DIV=43
    ASSIGN_PLUS=44
    ASSIGN_MINUS=45
    ASSIGN=46
    STRING=47
    INT=48
    WHITESPACE=49
    COMMENT=50
    COMMENT_BLOCK=51
    ERROR=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YAPLParser.EOF, 0)

        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ClassDefContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.classDef()
                self.state = 11
                self.match(YAPLParser.SEMICOLON)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==YAPLParser.CLASS):
                    break

            self.state = 17
            self.match(YAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE_ID)
            else:
                return self.getToken(YAPLParser.TYPE_ID, i)

        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def featureDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureDefContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureDefContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YAPLParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)




    def classDef(self):

        localctx = YAPLParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(YAPLParser.CLASS)
            self.state = 20
            self.match(YAPLParser.TYPE_ID)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPLParser.INHERITS:
                self.state = 21
                self.match(YAPLParser.INHERITS)
                self.state = 22
                self.match(YAPLParser.TYPE_ID)


            self.state = 25
            self.match(YAPLParser.LBRACE)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YAPLParser.OBJECT_ID:
                self.state = 26
                self.featureDef()
                self.state = 27
                self.match(YAPLParser.SEMICOLON)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(YAPLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FeatureDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def formalDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalDefContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalDefContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def ASSIGN(self):
            return self.getToken(YAPLParser.ASSIGN, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_featureDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeatureDef" ):
                listener.enterFeatureDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeatureDef" ):
                listener.exitFeatureDef(self)




    def featureDef(self):

        localctx = YAPLParser.FeatureDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_featureDef)
        self._la = 0 # Token type
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(YAPLParser.OBJECT_ID)
                self.state = 37
                self.match(YAPLParser.LPAREN)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.OBJECT_ID:
                    self.state = 38
                    self.formalDef()
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPLParser.COMMA:
                        self.state = 39
                        self.match(YAPLParser.COMMA)
                        self.state = 40
                        self.formalDef()
                        self.state = 45
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 48
                self.match(YAPLParser.RPAREN)
                self.state = 49
                self.match(YAPLParser.COLON)
                self.state = 50
                self.match(YAPLParser.TYPE_ID)
                self.state = 51
                self.match(YAPLParser.LBRACE)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(YAPLParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(YAPLParser.OBJECT_ID)
                self.state = 56
                self.match(YAPLParser.COLON)
                self.state = 57
                self.match(YAPLParser.TYPE_ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASSIGN:
                    self.state = 58
                    self.match(YAPLParser.ASSIGN)
                    self.state = 59
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_formalDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalDef" ):
                listener.enterFormalDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalDef" ):
                listener.exitFormalDef(self)




    def formalDef(self):

        localctx = YAPLParser.FormalDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formalDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(YAPLParser.OBJECT_ID)
            self.state = 65
            self.match(YAPLParser.COLON)
            self.state = 66
            self.match(YAPLParser.TYPE_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.OBJECT_ID)
            else:
                return self.getToken(YAPLParser.OBJECT_ID, i)

        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def IF(self):
            return self.getToken(YAPLParser.IF, 0)

        def THEN(self):
            return self.getToken(YAPLParser.THEN, 0)

        def ELSE(self):
            return self.getToken(YAPLParser.ELSE, 0)

        def FI(self):
            return self.getToken(YAPLParser.FI, 0)

        def WHILE(self):
            return self.getToken(YAPLParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(YAPLParser.LOOP, 0)

        def POOL(self):
            return self.getToken(YAPLParser.POOL, 0)

        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def LET(self):
            return self.getToken(YAPLParser.LET, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COLON)
            else:
                return self.getToken(YAPLParser.COLON, i)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE_ID)
            else:
                return self.getToken(YAPLParser.TYPE_ID, i)

        def IN(self):
            return self.getToken(YAPLParser.IN, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.ASSIGN)
            else:
                return self.getToken(YAPLParser.ASSIGN, i)

        def NEW(self):
            return self.getToken(YAPLParser.NEW, 0)

        def NEG(self):
            return self.getToken(YAPLParser.NEG, 0)

        def ISVOID(self):
            return self.getToken(YAPLParser.ISVOID, 0)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)

        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPLParser.FALSE, 0)

        def MULT(self):
            return self.getToken(YAPLParser.MULT, 0)

        def DIV(self):
            return self.getToken(YAPLParser.DIV, 0)

        def PLUS(self):
            return self.getToken(YAPLParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(YAPLParser.MINUS, 0)

        def LE(self):
            return self.getToken(YAPLParser.LE, 0)

        def LT(self):
            return self.getToken(YAPLParser.LT, 0)

        def EQ(self):
            return self.getToken(YAPLParser.EQ, 0)

        def DOT(self):
            return self.getToken(YAPLParser.DOT, 0)

        def AT(self):
            return self.getToken(YAPLParser.AT, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 69
                self.match(YAPLParser.OBJECT_ID)
                self.state = 70
                self.match(YAPLParser.LPAREN)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPLParser.IF) | (1 << YAPLParser.LET) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.OBJECT_ID) | (1 << YAPLParser.LPAREN) | (1 << YAPLParser.LBRACE) | (1 << YAPLParser.NEG) | (1 << YAPLParser.STRING) | (1 << YAPLParser.INT))) != 0):
                    self.state = 71
                    self.expr(0)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPLParser.COMMA:
                        self.state = 72
                        self.match(YAPLParser.COMMA)
                        self.state = 73
                        self.expr(0)
                        self.state = 78
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 81
                self.match(YAPLParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 82
                self.match(YAPLParser.IF)
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(YAPLParser.THEN)
                self.state = 85
                self.expr(0)
                self.state = 86
                self.match(YAPLParser.ELSE)
                self.state = 87
                self.expr(0)
                self.state = 88
                self.match(YAPLParser.FI)
                pass

            elif la_ == 3:
                self.state = 90
                self.match(YAPLParser.WHILE)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(YAPLParser.LOOP)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(YAPLParser.POOL)
                pass

            elif la_ == 4:
                self.state = 96
                self.match(YAPLParser.LBRACE)
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 97
                    self.expr(0)
                    self.state = 98
                    self.match(YAPLParser.SEMICOLON)
                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPLParser.IF) | (1 << YAPLParser.LET) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.OBJECT_ID) | (1 << YAPLParser.LPAREN) | (1 << YAPLParser.LBRACE) | (1 << YAPLParser.NEG) | (1 << YAPLParser.STRING) | (1 << YAPLParser.INT))) != 0)):
                        break

                self.state = 104
                self.match(YAPLParser.RBRACE)
                pass

            elif la_ == 5:
                self.state = 106
                self.match(YAPLParser.LET)
                self.state = 107
                self.match(YAPLParser.OBJECT_ID)
                self.state = 108
                self.match(YAPLParser.COLON)
                self.state = 109
                self.match(YAPLParser.TYPE_ID)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASSIGN:
                    self.state = 110
                    self.match(YAPLParser.ASSIGN)
                    self.state = 111
                    self.expr(0)


                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==YAPLParser.COMMA:
                    self.state = 114
                    self.match(YAPLParser.COMMA)
                    self.state = 115
                    self.match(YAPLParser.OBJECT_ID)
                    self.state = 116
                    self.match(YAPLParser.COLON)
                    self.state = 117
                    self.match(YAPLParser.TYPE_ID)
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==YAPLParser.ASSIGN:
                        self.state = 118
                        self.match(YAPLParser.ASSIGN)
                        self.state = 119
                        self.expr(0)


                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 127
                self.match(YAPLParser.IN)
                self.state = 128
                self.expr(19)
                pass

            elif la_ == 6:
                self.state = 129
                self.match(YAPLParser.NEW)
                self.state = 130
                self.match(YAPLParser.TYPE_ID)
                pass

            elif la_ == 7:
                self.state = 131
                self.match(YAPLParser.NEG)
                self.state = 132
                self.expr(17)
                pass

            elif la_ == 8:
                self.state = 133
                self.match(YAPLParser.ISVOID)
                self.state = 134
                self.expr(16)
                pass

            elif la_ == 9:
                self.state = 135
                self.match(YAPLParser.NOT)
                self.state = 136
                self.expr(8)
                pass

            elif la_ == 10:
                self.state = 137
                self.match(YAPLParser.OBJECT_ID)
                self.state = 138
                self.match(YAPLParser.ASSIGN)
                self.state = 139
                self.expr(7)
                pass

            elif la_ == 11:
                self.state = 140
                self.match(YAPLParser.LPAREN)
                self.state = 141
                self.expr(0)
                self.state = 142
                self.match(YAPLParser.RPAREN)
                pass

            elif la_ == 12:
                self.state = 144
                self.match(YAPLParser.OBJECT_ID)
                pass

            elif la_ == 13:
                self.state = 145
                self.match(YAPLParser.INT)
                pass

            elif la_ == 14:
                self.state = 146
                self.match(YAPLParser.STRING)
                pass

            elif la_ == 15:
                self.state = 147
                self.match(YAPLParser.TRUE)
                pass

            elif la_ == 16:
                self.state = 148
                self.match(YAPLParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 193
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 191
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 151
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 152
                        self.match(YAPLParser.MULT)
                        self.state = 153
                        self.expr(16)
                        pass

                    elif la_ == 2:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 154
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 155
                        self.match(YAPLParser.DIV)
                        self.state = 156
                        self.expr(15)
                        pass

                    elif la_ == 3:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 157
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 158
                        self.match(YAPLParser.PLUS)
                        self.state = 159
                        self.expr(14)
                        pass

                    elif la_ == 4:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 160
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 161
                        self.match(YAPLParser.MINUS)
                        self.state = 162
                        self.expr(13)
                        pass

                    elif la_ == 5:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 163
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 164
                        self.match(YAPLParser.LE)
                        self.state = 165
                        self.expr(12)
                        pass

                    elif la_ == 6:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 166
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 167
                        self.match(YAPLParser.LT)
                        self.state = 168
                        self.expr(11)
                        pass

                    elif la_ == 7:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 169
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 170
                        self.match(YAPLParser.EQ)
                        self.state = 171
                        self.expr(10)
                        pass

                    elif la_ == 8:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 172
                        if not self.precpred(self._ctx, 24):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 24)")
                        self.state = 175
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==YAPLParser.AT:
                            self.state = 173
                            self.match(YAPLParser.AT)
                            self.state = 174
                            self.match(YAPLParser.TYPE_ID)


                        self.state = 177
                        self.match(YAPLParser.DOT)
                        self.state = 178
                        self.match(YAPLParser.OBJECT_ID)
                        self.state = 179
                        self.match(YAPLParser.LPAREN)
                        self.state = 188
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPLParser.IF) | (1 << YAPLParser.LET) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.OBJECT_ID) | (1 << YAPLParser.LPAREN) | (1 << YAPLParser.LBRACE) | (1 << YAPLParser.NEG) | (1 << YAPLParser.STRING) | (1 << YAPLParser.INT))) != 0):
                            self.state = 180
                            self.expr(0)
                            self.state = 185
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==YAPLParser.COMMA:
                                self.state = 181
                                self.match(YAPLParser.COMMA)
                                self.state = 182
                                self.expr(0)
                                self.state = 187
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 190
                        self.match(YAPLParser.RPAREN)
                        pass

             
                self.state = 195
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


